--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-dinky
-title: [ENSO forecast]
-description: [A short description of your site's purpose]
+title: [ENSO Forecast]
+description: [The DSCI 560 course project from group 1.]
