--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-dinky
 title: [ENSO Forecast]
 description: [The project of DSCI560 from group 1.]
-show_downloads: ["true"]
+show_downloads: ["false"]
